<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="50dp"
        android:id="@+id/lifeStoryLines">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifeStoryLines"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifeStoryLinesSubTitle"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lifeStoryLinesSwitch"
            android:layout_alignParentEnd="true"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lifeStoryLinesSpinner"
            android:layout_toLeftOf="@+id/lifeStoryLinesSwitch"/>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"/>
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="50dp"
        android:id="@+id/familyTreeLines">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/familyTreeLines"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/familyTreeLinesSubTitle"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/familyTreeLinesSwitch"
            android:layout_alignParentEnd="true"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/familyTreeLinesSpinner"
            android:layout_toLeftOf="@+id/familyTreeLinesSwitch"/>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"/>
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="50dp"
        android:id="@+id/spouseLines">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spouseLines"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spouseLinesSubTitle"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spouseLinesSwitch"
            android:layout_alignParentEnd="true"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spouseLinesSpinner"
            android:layout_toLeftOf="@+id/spouseLinesSwitch"/>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"/>
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="50dp"
        android:id="@+id/mapType">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapType"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapTypeSubTitle"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapTypeSpinner"
            android:layout_alignParentEnd="true"/>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"/>
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="50dp"
        android:id="@+id/resyncData">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resyncData"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resyncDataSubTitle"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"/>
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="50dp"
        android:id="@+id/logout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logoutSubTitle"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <!--Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eventSwitch"
            android:layout_alignParentEnd="true"/-->
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"/>
    </RelativeLayout>
</LinearLayout>